# AME-Scanner

./: .gitignore  CMakeLists.txt  README.md  scanner.md
docs/: protocol.md
include/: FieldLoader.h  ScanProbe.h  SpatialGrid.h  common.h
scanner-cli/src/: main.cpp
scanner-core/include/: dbscan.h  density_analyzer.h  field_loader.h  gaussian.h  spatial_graph.h  spatial_structure_package.h  surface_extractor.h
scanner-core/src/: dbscan.cpp  density_analyzer.cpp  field_loader.cpp  spatial_graph.cpp  surface_extractor.cpp
src/: FieldLoader.cpp  ScanProbe.cpp  SpatialGrid.cpp  common.cpp  main.cpp
tests/: CMakeLists.txt  test_3dgs_loading.cpp  test_main.cpp  test_minimal.cpp
